History of this buildout
========================

6.0.0 (unreleased)
------------------

- Removed Hearings from most code: view registrations, conditions,
  properties, permissions, tests.  We do keep the class, but you can
  no longer add a Hearing.  MINA-99.  [maurits]

- Added upgrade step to migrate Hearings to MREvents.  MINA-99.  [maurits]

- Set digibib title inside the white background.  MINA-113.
- Digibib Download link to red inside red framework. MINA-114.
  [lhuiskes]

- Set text/html as first option in body richwidget of theme.
  [jladage]

- Less padding on editbar. [jladage]

- Made Hearing use the views and macros from MREvent.  Moved the
  Hearing tests to the MREvent tests.  Part of MINA-99.  [maurits]

- Event registration is now anonymous.  Added migration.  MINA-103.
  [maurits]

- Set correct twitter id's.  [lhuiskes]

- Call Masonry twice to be sure it succeeds.  Made sure the js/main.js
  is only used in the click model and the static/main.js, which
  contains all 'grunted' javascript, is loaded via the javascript
  registry.  Note: you must run the 'Apply extra product profiles'
  upgrade step again.  [lennard, maurits]

- Show agenda and attendees only for future meetings, which includes
  meetings of today.  Show heading of agenda items only when they are
  there or can be added.  MINA-104.  [maurits]

- Let the search box point to /documenten in the theme.  Fixes MINA-98.
  Doing a checkout of the zest-default-from-request branch from eea.facetednavigation.
  See pull request https://github.com/eea/eea.facetednavigation/pull/81
  [maurits]

- Body text on the homepage will now be displayed as a hearing event
  on the front page.
  [diederik]

- Hidden the option in faceted search to restrict the text search to
  the current search results.  You need to import the faceted settings
  again, or run the import step that does this.  MINA-97.  [maurits]

- Integrating contact page including migration of image.
  [diederik]
