@@ -7756,6 +7756,35 @@ div.digibib_list {
   margin-top: 0;
   text-transform: none; }
 
+.template-quickedit #content {
+  background: white;
+  padding: 20px; }
+
+.template-quickedit .pfg-form {
+  float: none;
+  width: 100%;
+  border-top: 5px solid #2e94bd;
+  background: #7db2c9; }
+  .template-quickedit .pfg-form .theader div, .template-quickedit .pfg-form .theader th {
+    background: #7db2c9;
+    border: none;
+    color: white; }
+  .template-quickedit .pfg-form input[type="radio"], .template-quickedit .pfg-form input[type="checkbox"] {
+    margin-right: 5px; }
+  .template-quickedit .pfg-form .field {
+    clear: none; }
+  .template-quickedit .pfg-form #pfg-qetable .qefield, .template-quickedit .pfg-form #pfgActionEdit .qefield {
+    margin: 0;
+    width: 100% !important; }
+    .template-quickedit .pfg-form #pfg-qetable .qefield:nth-child(even), .template-quickedit .pfg-form #pfgActionEdit .qefield:nth-child(even) {
+      background: #deedf2 !important; }
+    .template-quickedit .pfg-form #pfg-qetable .qefield:nth-child(odd), .template-quickedit .pfg-form #pfgActionEdit .qefield:nth-child(odd) {
+      background: #edf5f7 !important; }
+  .template-quickedit .pfg-form #pfgThanksEdit .even {
+    background: #deedf2 !important; }
+  .template-quickedit .pfg-form #pfgThanksEdit .odd {
+    background: #edf5f7 !important; }
+
 .pfg-minaraad_form {
   border: 1px solid #d9d9d9;
   border-top: 5px solid #2e94bd;
